Updated Canadian English translation.
2004-05-22  Alexander Winston  <alexander.winston@comcast.net>

	* en_CA.po: Updated Canadian English translation.

svn path=/trunk/; revision=2176

--- a/po/en_CA.po
+++ b/po/en_CA.po
@@ -8,9 +8,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: beast\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-05-20 20:11+0200\n"
-"PO-Revision-Date: 2004-04-11 03:08-0400\n"
-"Last-Translator: Adam Weinberger <adamw@gnome.org>\n"
+"POT-Creation-Date: 2004-05-22 18:07-0400\n"
+"PO-Revision-Date: 2004-05-22 18:09-0400\n"
+"Last-Translator: Alexander Winston <alexander.winston@comcast.net>\n"
 "Language-Team: English/Canada <adamw@FreeBSD.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1896,12 +1896,12 @@ msgstr "Notice"
 
 #: beast-gtk/bstusermessage.c:103
 msgid "Diagnostic"
-msgstr ""
+msgstr "Diagnostic"
 
 #. shouldn't end up in dialogs
 #: beast-gtk/bstusermessage.c:107
 msgid "Debug"
-msgstr ""
+msgstr "Debug"
 
 #: beast-gtk/bstusermessage.c:111
 msgid "Miscellaneous Message"
@@ -2534,9 +2534,8 @@ msgid "Output Channels:"
 msgstr "Output Channels:"
 
 #: bse/bsebiquadfilter.c:105
-#, fuzzy
 msgid "/Filters/Biquad Types"
-msgstr "Filter Type"
+msgstr "/Filters/Biquad Types"
 
 #: bse/bsebiquadfilter.c:124
 msgid "Filter"
@@ -2653,9 +2652,8 @@ msgid "Filtered Audio Signal"
 msgstr "Filtered Audio Signal"
 
 #: bse/bseconstant.c:84
-#, fuzzy
 msgid "/Other Sources/Constant"
-msgstr "_Other Sources"
+msgstr "/Other Sources/Constant"
 
 #: bse/bseconstant.c:106 bse/bseconstant.c:137
 #, c-format
@@ -2709,9 +2707,8 @@ msgstr ""
 "Synth Mixing Frequency to reduce CPU load"
 
 #: bse/bseinstrumentinput.c:68
-#, fuzzy
 msgid "/Input & Output/Instrument Voice Input"
-msgstr "_Input & Output"
+msgstr "/Input & Output/Instrument Voice Input"
 
 #: bse/bseinstrumentinput.c:101 bse/bsemidiinput.c:109
 msgid "Note Frequency"
@@ -2742,9 +2739,8 @@ msgid "Velocity while the note is pressed"
 msgstr "Velocity while the note is pressed"
 
 #: bse/bseinstrumentoutput.c:68
-#, fuzzy
 msgid "/Input & Output/Instrument Output"
-msgstr "_Input & Output"
+msgstr "/Input & Output/Instrument Output"
 
 #: bse/bseinstrumentoutput.c:101
 msgid "Left Audio"
@@ -2775,9 +2771,8 @@ msgid "High indicates the instrument is done synthesizing"
 msgstr "High indicates the instrument is done synthesizing"
 
 #: bse/bsemidicontroller.c:86
-#, fuzzy
 msgid "/Input & Output/MIDI Control Input"
-msgstr "_Input & Output"
+msgstr "/Input & Output/MIDI Control Input"
 
 #: bse/bsemidicontroller.c:137
 msgid "Ctrl Out1"
@@ -2812,9 +2807,8 @@ msgid "MIDI Signal 4"
 msgstr "MIDI Signal 4"
 
 #: bse/bsemidiinput.c:82
-#, fuzzy
 msgid "/Input & Output/MIDI Voice Input"
-msgstr "_Input & Output"
+msgstr "/Input & Output/MIDI Voice Input"
 
 #: bse/bsemidivoice.c:109 plugins/bsesequencer.c:107
 msgid "Freq Out"
@@ -2859,9 +2853,8 @@ msgid "Disconnect Out"
 msgstr "Disconnect Out"
 
 #: bse/bsepcminput.c:85
-#, fuzzy
 msgid "/Input & Output/PCM Input"
-msgstr "_Input & Output"
+msgstr "/Input & Output/PCM Input"
 
 #: bse/bsepcminput.c:128 plugins/artscompressor.idl:51
 #: plugins/freeverb/bsefreeverb.c:125
@@ -2882,9 +2875,8 @@ msgid "Right channel output"
 msgstr "Right channel output"
 
 #: bse/bsepcmoutput.c:85
-#, fuzzy
 msgid "/Input & Output/PCM Output"
-msgstr "_Input & Output"
+msgstr "/Input & Output/PCM Output"
 
 #: bse/bsepcmoutput.c:128 plugins/artscompressor.idl:49
 #: plugins/freeverb/bsefreeverb.c:123
@@ -2906,26 +2898,25 @@ msgstr "Right channel Input"
 
 #: bse/bseserver.c:503
 msgid "Advice about MIDI device selections"
-msgstr ""
+msgstr "Advice about MIDI device selections"
 
 #: bse/bseserver.c:504
 msgid "Alert me about MIDI device selections"
-msgstr ""
+msgstr "Alert me about MIDI device selections"
 
 #: bse/bseserver.c:505
 #, c-format
 msgid "failed to open midi device %s (reverting to null device): %s"
-msgstr ""
+msgstr "failed to open midi device %s (reverting to null device): %s"
 
 #: bse/bseserver.c:547
 #, c-format
 msgid "failed to open output file \"%s\": %s"
-msgstr ""
+msgstr "failed to open output file \"%s\": %s"
 
 #: bse/bsesnooper.c:77
-#, fuzzy
 msgid "/Misc/Snooper"
-msgstr "Snooper"
+msgstr "/Misc/Snooper"
 
 #: bse/bsesnooper.c:108
 msgid "Signal In"
@@ -2944,9 +2935,8 @@ msgstr ""
 "forms and modulation inputs."
 
 #: bse/bsestandardosc.c:109
-#, fuzzy
 msgid "/Audio Sources/Standard Oscillator"
-msgstr "/Modules/Audio Sources/Standard Oscillator"
+msgstr "/Audio Sources/Standard Oscillator"
 
 #: bse/bsestandardosc.c:130 bse/bsestandardosc.c:136
 msgid "Wave Form"
@@ -3053,9 +3043,8 @@ msgid "Syncronization Output"
 msgstr "Syncronization Output"
 
 #: bse/bsesubiport.c:90
-#, fuzzy
 msgid "/Virtualization/Virtual Input"
-msgstr "_Virtualization"
+msgstr "/Virtualization/Virtual Input"
 
 #: bse/bsesubiport.c:122 bse/bsesubsynth.c:132
 #, c-format
@@ -3078,9 +3067,8 @@ msgid "Virtual input %u"
 msgstr "Virtual input %u"
 
 #: bse/bsesuboport.c:90
-#, fuzzy
 msgid "/Virtualization/Virtual Output"
-msgstr "_Virtualization"
+msgstr "/Virtualization/Virtual Output"
 
 #: bse/bsesuboport.c:122 bse/bsesubsynth.c:142
 #, c-format
@@ -3093,9 +3081,8 @@ msgid "Virtual output %u"
 msgstr "Virtual output %u"
 
 #: bse/bsesubsynth.c:97
-#, fuzzy
 msgid "/Virtualization/Virtual Sub Synth"
-msgstr "_Virtualization"
+msgstr "/Virtualization/Virtual Sub Synth"
 
 #: bse/bsesubsynth.c:124
 msgid "Synthesis Network"
@@ -3146,9 +3133,8 @@ msgid "Last modification time"
 msgstr "Last modification time"
 
 #: bse/bsewaveosc.c:97
-#, fuzzy
 msgid "/Audio Sources/Wave Oscillator"
-msgstr "/Modules/Audio Sources/Standard Oscillator"
+msgstr "/Audio Sources/Wave Oscillator"
 
 #: bse/bsewaveosc.c:123
 msgid "Wave to play"
