--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+Mon Jun  7 19:21:37 2004  Tim Janik  <timj@gtk.org>
+
+	* docs/site-about.texi:
+	* docs/site-contact.texi:
+	* docs/site-navigation.xml:
+	* docs/site-news.texi:
+	* docs/site-search.texi:
+	modified wiki urls to be /wiki: relative.
+
 Mon May 31 16:37:38 2004  Tim Janik  <timj@gtk.org>
 
 	* launchers/Makefile.am: prefix $(bindir) with $(DESTDIR) to allow
