--- a/TODO
+++ b/TODO
@@ -1,4 +1,8 @@
 FIXMES:
+- remove docs/generated/bse-plugin-generator.1
+- new 32th note etc. icons
+- assertion failed:
+  BSE-ERROR **: file bsemidireceiver.cc: line 525 (void <unnamed>::change_voice_input(<unnamed>::VoiceInput*, <unnamed>::VoiceInputTable*, long long unsigned int, <unnamed>::VoiceChangeType, float, float, GslTrans*)): assertion failed: (vinput->iter == table->end())
 - implement proper pattern/track/song resizing by means of adding [-] and [+] buttons next to scrollbars
 - make channel blurbs and module names have the same font in router display
 - need midi keyboard demo .bse file to be easily loadable (via demo/ menu)
@@ -91,6 +95,7 @@ FIXMES:
 - fade in/out of samples in sample editor
 - wave editor: provide transpose spinner for wave preview
 - gslwaveosc resp. gslwavechunk occasionally segfaults on ping-pong loops
+- Time Counter: Measure,QuarterNote,SixteenthNote,3840ticks
 
 DOCS:
 - add text about MIDI realtime synthesis via external MIDI devices to beast overview paper
@@ -105,6 +110,23 @@ DOCS:
 - what kind of texi macros should be used to markup manual page contents?
   could WRITING.3 have a set of default macros showing this? [alper]
 - allow commas in @refBlurb{}, respectively Info BLURB = ","; texts [alper]
+
+MONITORING DIALOG:
+* Frame "Thread Info"
+- tree view
+- THREAD Cpu% User Sys
+- TOTAL  Cpu% User Sys
+* Frame "Latency"
+- tree view
+- Effective Output Latency: xx.x ms   [same for Input]
+  (Beast DSP Engine ---> Membrane)
+  (Beast DSP Engine ---> Output Driver)
+
+DRIVER DIALOG:
+* Frame "Audio Driver"
+- Driver name (choice)
+* Frame "Midi Driver"
+- Driver NAme
 
 TODO:
 - Icons: delete-track and delete-part shouldn't have the same item in track-roll
