--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+Thu Jun 10 01:58:03 2004  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/gxk/gxkauxwidgets.c: changed property, provide a bool
+	keep-menubar-image per menu item. since stupid Gtk+-2.4 decides to
+	change menu item image visibility behind the users back, we have
+	to get rid of images in menu items in menubars the hard way: remove
+	the widget unless keep-menubar-image is TRUE.
+
+	* beast-gtk/dialogs/gadgets-standard.xml: removed old setting.
+
 Thu Jun 10 01:00:22 2004  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/dialogs/gadgets-standard.xml: enable tooltips on menu-items.
