--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+Thu Jun 10 02:32:49 2004  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/bstparam-choice.c: set proper tooltips on menu items.
+
+	* beast-gtk/bstpatternctrl.c: handle 1/128, 1/128. and 1/128T notes.
+
+	* beast-gtk/bstrecords.idl: added 1/128, 1/128. and 1/128T note lengths.
+
+	* beast-gtk/gxk/gxkutils.[ch]: added convenience function
+	gxk_widget_set_tooltip().
+
 Thu Jun 10 01:58:03 2004  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/gxk/gxkauxwidgets.c: changed property, provide a bool
