--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+Fri Jun 11 04:31:02 2004  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/bstapp.[hc]: made dialog actions private.
+	added profile view menu item. added
+	bst_app_show_release_notes() to show release notes dialog.
+
+	* beast-gtk/bstmain.c: give GUI thread a name and adapt to
+	bstapp.h changes.
+
+	* beast-gtk/bstprofiler.[hc]: new dialog implementation, showing
+	CPU usage statistics.
+
+	* beast-gtk/dialogs/gadgets-beast.xml: added profiler dialog.
+
 Thu Jun 10 02:32:49 2004  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bstparam-choice.c: set proper tooltips on menu items.
