--- a/docs/site-links-synthesis.texi
+++ b/docs/site-links-synthesis.texi
@@ -8,7 +8,10 @@
 
 @unnumbered About Synthesis
 
+Miscellaneous Links:
 @itemize
+@item @uref{http://wikipedia.org/,, Wikipedia}:
+	@uref{http://wikipedia.org/wiki/Digital_signal_processing,,Digital Signal Processing} (link collection)
 @item @uref{http://www.harmony-central.com,, Harmony Central}:
 	@uref{http://www.harmony-central.com/Effects/effects-explained.html,,Effects Explained}
 @item @uref{http://www.synthmuseum.com,, Synth Museum}:
