--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,8 @@
+Sat Jun 12 19:46:42 2004  Tim Janik  <timj@gtk.org>
+
+	* bseserver.c (bse_server_class_init): provide wave_file property
+	with a tooltip. hint towards filename.
+
 Fri Jun 11 04:35:46 2004  Tim Janik  <timj@gtk.org>
 
 	* bsecore.idl:
