--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+Sat Jun 12 19:44:01 2004  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/bstapp.c: pack WAVE File entry into expandable areas.
+
+	* beast-gtk/bstprofiler.c: update dialog upon initialization.
+
+	* beast-gtk/dialogs/gadgets-beast.xml: provide expandable area for
+	WAVE File entry.
+
+	* beast-gtk/gxk/gxkutils.c (gxk_idle_show_widget): raise the widget
+	if it's a window and already visible.
+
 Sat Jun 12 19:03:06 2004  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bstprofiler.[hc]: majorly beefed up the dialog ;)
